# ngen_renderer

./: .gitignore  CMakeLists.txt  license.txt  readme.md
cmake_modules/: FindSDL2.cmake  FindVulkan.cmake
example/: CMakeLists.txt  main.cpp  readme.md  render.cpp  render.h
example/shaders/: shader.frag.glsl  shader.vert.glsl
ngen_directx12/: CMakeLists.txt  readme.md
ngen_directx12/include/: com_ptr.h  context.h
ngen_directx12/source/: context.cpp
ngen_display/: CMakeLists.txt  readme.md
ngen_display/include/: display_port.h  scene.h
ngen_display/source/: display_port.cpp
ngen_opengl/: CMakeLists.txt  readme.md
ngen_opengl/include/: buffer_object.h  context_state.h  cull_mode.h  depth_compare.h  frame_buffer.h  gl_state.h  platform.h  shader_object.h  shader_program.h  texture.h  vertex_array_object.h
ngen_opengl/source/: buffer_object.cpp  context_state.cpp  frame_buffer.cpp  gl_state.cpp  shader_object.cpp  shader_program.cpp  texture.cpp  vertex_array_object.cpp
ngen_opengl/test/: CMakeLists.txt  main.cpp  test_buffer_object.cpp  test_shader_object.cpp  test_shader_program.cpp  test_texture.cpp
ngen_vulkan/: CMakeLists.txt  readme.md
ngen_vulkan/include/: buffer.h  command_buffer.h  command_pool.h  device.h  fence.h  physical_device.h  pipeline.h  pipeline_description.h  platform.h  platform_apple.h  platform_windows.h  render_pass.h  renderer.h  semaphore.h  shader.h  swap_chain.h  vertex_attribute.h  vulkan_context.h  vulkan_error.h  vulkan_error_def.h  vulkan_pipeline.h  window_surface.h
ngen_vulkan/source/: buffer.cpp  command_pool.cpp  device.cpp  fence.cpp  physical_device.cpp  pipeline.cpp  pipeline_description.cpp  platform.cpp  render_pass.cpp  renderer.cpp  semaphore.cpp  shader.cpp  swap_chain.cpp  vulkan_context.cpp  vulkan_error.cpp  vulkan_pipeline.cpp  window_surface.cpp
